feat: :sparkles: Actualización de los valores de los enumeradores de estado de eventos e implementación de servicio de archivos
- Introduce un endpoint para la carga de imágenes en eventos.
- Agrega la funcionalidad de servir archivos subidos de manera estática.
- Mejora el registro de errores del servidor y estandariza los mensajes de error.
